--- a/index.html
+++ b/index.html
@@ -3,10 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">  
     <title>The Best Project</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+    <h1> Beers Cheers! </h1>
+    <hr>
+    <br>
     
+</body>
+
+<footer class="branding">
+    <small>&copy; 2023 <strong>TV Show App</strong></small>
+  </footer>
+  <script src= "script.js"></script>
+
 </body>
 </html>
