--- a/index.html
+++ b/index.html
@@ -11,11 +11,19 @@
     <h1> Beers Cheers! </h1>
     <hr>
     <br>
-    
-</body>
+    <h1> Breweries </h1>
+    <button id="shows">All Breweries</button>
+    <hr>
+    <br>
+    <div id="main">
+        <ul id="show-list">
+
+        </ul>
+        <div id="info"></div>
+    </div>
 
 <footer class="branding">
-    <small>&copy; 2023 <strong>TV Show App</strong></small>
+    <small>&copy; 2023 <strong>Beers & Cheers</strong></small>
   </footer>
   <script src= "script.js"></script>
 
