--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <hr>
     <br>
     <h1> Breweries </h1>
-    <button id="shows">All Breweries</button>
+    <button id="beers">All Breweries</button>
     <hr>
     <br>
     <div id="main">
-        <ul id="show-list">
+        <ul id="beer-list">
 
         </ul>
         <div id="info"></div>
