--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
     <br>
     <h1> Breweries </h1>
     <button id="beers">All Breweries</button>
+
+
+    <input type = "text" placeholder = "Enter Search City">
+    <button>Search</button>
+
+
     <hr>
     <br>
     <div id="main">
