--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 
     <input type = "text" placeholder = "Enter Search City">
-    <button>Search</button>
+    <button id = "btnSearch">Search</button>
 
 
     <hr>
