--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
     <h1> Breweries </h1>
     <button id="beers">All Breweries</button>
 
-
-    <input type = "text" placeholder = "Enter Search City">
-    <button id = "btnSearch">Search</button>
+    <form id="frmSearch">
+        <input type="text" id="txtCity" placeholder="Enter search city" />
+        <button type="submit" id="btnSearch">Search</button>
+    </form>
 
     <hr>
     <br>
