--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <form id="frmSearch">
         <input type="text" id="txtCity" placeholder="Enter search city" />
         <button type="submit" id="btnSearch">Search</button>
+        <button id="btnClear">Clear</button>
     </form>
 
     <hr>
