--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1> Beers Cheers! </h1>
+    <p>Welcome to Beers Cheers where you can find a brewey near you. Take a look at our master lise or search for a brewey in a city near you!</p>
     <hr>
     <br>
     <h1> Breweries </h1>
